infrastructure/homelab/controllers/bitwarden-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bitwarden-ingress
  namespace: homeservices
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bitwarden.local.jonathanschaeffer.com`)
      services:
        - name: bitwarden
          port: 8089
  tls:
    secretName: local-jonathanschaeffer-com-production-tls
