infrastructure/homelab/controllers/heimdall-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall-ingress
  namespace: homeservices
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`heimdall.local.jonathanschaeffer.com`)
      services:
        - name: heimdall
          port: 5690
  tls:
    secretName: local-jonathanschaeffer-com-production-tls
