infrastructure/homelab/controllers/nextcloud-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-ingress
  namespace: homeservices
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nextcloud.local.jonathanschaeffer.com`)
      services:
        - name: nextcloud
          port: 5656
  tls:
    secretName: local-jonathanschaeffer-com-production-tls
