infrastructure/homelab/controllers/ombi.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ombi-ingress
  namespace: homeservices
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ombi.local.jonathanschaeffer.com`)
      services:
        - name: ombi
          port: 5379
  tls:
    secretName: local-jonathanschaeffer-com-production-tls
