infrastructure/homelab/controllers/tautulli-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli-ingress
  namespace: homeservices
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tautulli.local.jonathanschaeffer.com`)
      services:
        - name: tautulli
          port: 8181
  tls:
    secretName: local-jonathanschaeffer-com-production-tls
