infrastructure/homelab/controllers/transmission-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: transmission-ingress
  namespace: homeservices
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`transmission.local.jonathanschaeffer.com`)
      services:
        - name: transmission
          port: 9091
  tls:
    secretName: local-jonathanschaeffer-com-production-tls
